--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,8 @@ python-dotenv==1.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.3
 click==8.1.7
-psycopg[binary]==3.1.18
+
+# psycopg version that supports Python 3.13
+psycopg[binary]==3.2.13
+
 gunicorn==21.2.0
